--- a/components/expire.html
+++ b/components/expire.html
@@ -243,7 +243,33 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5" data-path="../chapters/question.html">
+        <li class="chapter " data-level="1.4.5" data-path="feedback.html">
+            
+                <a href="feedback.html">
+            
+                    
+                    Feedback
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.6" data-path="recorder.html">
+            
+                <a href="recorder.html">
+            
+                    
+                    Recorder
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.7" data-path="../chapters/question.html">
             
                 <a href="../chapters/question.html">
             
@@ -257,7 +283,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.5.1" data-path="quiz.html">
+        <li class="chapter " data-level="1.4.7.1" data-path="quiz.html">
             
                 <a href="quiz.html">
             
@@ -270,7 +296,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5.2" data-path="free-text-question.html">
+        <li class="chapter " data-level="1.4.7.2" data-path="free-text-question.html">
             
                 <a href="free-text-question.html">
             
@@ -283,7 +309,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5.3" data-path="match-list-question.html">
+        <li class="chapter " data-level="1.4.7.3" data-path="match-list-question.html">
             
                 <a href="match-list-question.html">
             
@@ -296,7 +322,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5.4" data-path="multiple-choice-question.html">
+        <li class="chapter " data-level="1.4.7.4" data-path="multiple-choice-question.html">
             
                 <a href="multiple-choice-question.html">
             
@@ -309,7 +335,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5.5" data-path="number-question.html">
+        <li class="chapter " data-level="1.4.7.5" data-path="number-question.html">
             
                 <a href="number-question.html">
             
@@ -322,7 +348,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5.6" data-path="order-question.html">
+        <li class="chapter " data-level="1.4.7.6" data-path="order-question.html">
             
                 <a href="order-question.html">
             
@@ -335,7 +361,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5.7" data-path="range-question.html">
+        <li class="chapter " data-level="1.4.7.7" data-path="range-question.html">
             
                 <a href="range-question.html">
             
@@ -348,7 +374,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5.8" data-path="select-question.html">
+        <li class="chapter " data-level="1.4.7.8" data-path="select-question.html">
             
                 <a href="select-question.html">
             
@@ -363,32 +389,6 @@
     
 
             </ul>
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.6" data-path="feedback.html">
-            
-                <a href="feedback.html">
-            
-                    
-                    Feedback
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.7" data-path="recorder.html">
-            
-                <a href="recorder.html">
-            
-                    
-                    Recorder
-            
-                </a>
-            
-
             
         </li>
     
@@ -568,9 +568,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.9.7" data-path="input/text-area.md">
+        <li class="chapter " data-level="1.4.9.7" data-path="input/text-area.html">
             
-                <span>
+                <a href="input/text-area.html">
             
                     
                     Text Area
@@ -1398,7 +1398,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Expire","level":"1.4.11.4","depth":3,"next":{"title":"Gate","level":"1.4.11.5","depth":3,"path":"components/gate.md","ref":"components/gate.md","articles":[]},"previous":{"title":"Enlargeable Grid","level":"1.4.11.3","depth":3,"path":"components/enlargeable-grid.md","ref":"components/enlargeable-grid.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/expire.md","mtime":"2018-10-08T02:30:50.649Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T02:31:29.967Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Expire","level":"1.4.11.4","depth":3,"next":{"title":"Gate","level":"1.4.11.5","depth":3,"path":"components/gate.md","ref":"components/gate.md","articles":[]},"previous":{"title":"Enlargeable Grid","level":"1.4.11.3","depth":3,"path":"components/enlargeable-grid.md","ref":"components/enlargeable-grid.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/expire.md","mtime":"2018-10-08T06:49:58.331Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T06:50:39.211Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
