--- a/components/input/slider.html
+++ b/components/input/slider.html
@@ -61,7 +61,7 @@
     <link rel="shortcut icon" href="../../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="text-area.md" />
+    <link rel="next" href="text-area.html" />
     
     
     <link rel="prev" href="select.html" />
@@ -243,7 +243,33 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5" data-path="../../chapters/question.html">
+        <li class="chapter " data-level="1.4.5" data-path="../feedback.html">
+            
+                <a href="../feedback.html">
+            
+                    
+                    Feedback
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.6" data-path="../recorder.html">
+            
+                <a href="../recorder.html">
+            
+                    
+                    Recorder
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.7" data-path="../../chapters/question.html">
             
                 <a href="../../chapters/question.html">
             
@@ -257,7 +283,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.5.1" data-path="../quiz.html">
+        <li class="chapter " data-level="1.4.7.1" data-path="../quiz.html">
             
                 <a href="../quiz.html">
             
@@ -270,7 +296,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5.2" data-path="../free-text-question.html">
+        <li class="chapter " data-level="1.4.7.2" data-path="../free-text-question.html">
             
                 <a href="../free-text-question.html">
             
@@ -283,7 +309,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5.3" data-path="../match-list-question.html">
+        <li class="chapter " data-level="1.4.7.3" data-path="../match-list-question.html">
             
                 <a href="../match-list-question.html">
             
@@ -296,7 +322,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5.4" data-path="../multiple-choice-question.html">
+        <li class="chapter " data-level="1.4.7.4" data-path="../multiple-choice-question.html">
             
                 <a href="../multiple-choice-question.html">
             
@@ -309,7 +335,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5.5" data-path="../number-question.html">
+        <li class="chapter " data-level="1.4.7.5" data-path="../number-question.html">
             
                 <a href="../number-question.html">
             
@@ -322,7 +348,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5.6" data-path="../order-question.html">
+        <li class="chapter " data-level="1.4.7.6" data-path="../order-question.html">
             
                 <a href="../order-question.html">
             
@@ -335,7 +361,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5.7" data-path="../range-question.html">
+        <li class="chapter " data-level="1.4.7.7" data-path="../range-question.html">
             
                 <a href="../range-question.html">
             
@@ -348,7 +374,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5.8" data-path="../select-question.html">
+        <li class="chapter " data-level="1.4.7.8" data-path="../select-question.html">
             
                 <a href="../select-question.html">
             
@@ -363,32 +389,6 @@
     
 
             </ul>
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.6" data-path="../feedback.html">
-            
-                <a href="../feedback.html">
-            
-                    
-                    Feedback
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.7" data-path="../recorder.html">
-            
-                <a href="../recorder.html">
-            
-                    
-                    Recorder
-            
-                </a>
-            
-
             
         </li>
     
@@ -568,9 +568,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.9.7" data-path="text-area.md">
+        <li class="chapter " data-level="1.4.9.7" data-path="text-area.html">
             
-                <span>
+                <a href="text-area.html">
             
                     
                     Text Area
@@ -1356,15 +1356,15 @@
 <p><a href="https://isle.heinz.cmu.edu/components/slider-input/" target="_blank">Open interactive preview</a></p>
 <h4 id="options">Options:</h4>
 <ul>
-<li><strong>defaultValue</strong> | <code>number</code>: undefined. Default: <code>10</code>.</li>
-<li><strong>disabled</strong> | <code>boolean</code>: undefined. Default: <code>false</code>.</li>
-<li><strong>inline</strong> | <code>boolean</code>: undefined. Default: <code>false</code>.</li>
-<li><strong>max</strong> | <code>number</code>: undefined. Default: <code>100</code>.</li>
-<li><strong>min</strong> | <code>number</code>: undefined. Default: <code>0</code>.</li>
-<li><strong>onChange</strong> | <code>function</code>: undefined. Default: <code>onChange() {}</code>.</li>
-<li><strong>precision</strong> | <code>number</code>: undefined. Default: <code>10</code>.</li>
-<li><strong>step</strong> | <code>(number|string)</code>: undefined. Default: <code>1</code>.</li>
-<li><strong>style</strong> | <code>object</code>: undefined. Default: <code>{}</code>.</li>
+<li><strong>defaultValue</strong> | <code>number</code>: The starting value of the slider. Default: <code>10</code>.</li>
+<li><strong>disabled</strong> | <code>boolean</code>: controls whether the slider input is active or not. If set to true, the slider will be present on the screen, albeit greyed-out. Default: <code>false</code>.</li>
+<li><strong>inline</strong> | <code>boolean</code>: controls whether to place the slider inline with text or outside. Default: <code>false</code>.</li>
+<li><strong>max</strong> | <code>number</code>: The maximum value of the slider. Default: <code>100</code>.</li>
+<li><strong>min</strong> | <code>number</code>: The minimum value of the slider. Default: <code>0</code>.</li>
+<li><strong>onChange</strong> | <code>function</code>: callback invoked with the new value when the slider value changes. Default: <code>onChange() {}</code>.</li>
+<li><strong>precision</strong> | <code>number</code>: rounding of the input. The value will be rounded to have no more significant digits than the precision. For example, if one wishes to only use integers, a precision of 10 would be used, while if one wishes to round to the hundreds place, one would use a precision of 0.001. Default: <code>10</code>.</li>
+<li><strong>step</strong> | <code>(number|string)</code>: step size of the slider. Default: <code>1</code>.</li>
+<li><strong>style</strong> | <code>object</code>: CSS inline styles. Default: <code>{}</code>.</li>
 </ul>
 
                                 
@@ -1398,7 +1398,7 @@
                 </a>
                 
                 
-                <a href="text-area.md" class="navigation navigation-next " aria-label="Next page: Text Area">
+                <a href="text-area.html" class="navigation navigation-next " aria-label="Next page: Text Area">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -1409,7 +1409,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Slider Input","level":"1.4.9.6","depth":3,"next":{"title":"Text Area","level":"1.4.9.7","depth":3,"path":"components/input/text-area.md","ref":"components/input/text-area.md","articles":[]},"previous":{"title":"Select Input","level":"1.4.9.5","depth":3,"path":"components/input/select.md","ref":"components/input/select.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/input/slider.md","mtime":"2018-10-08T02:30:50.657Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T02:31:29.967Z"},"basePath":"../..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Slider Input","level":"1.4.9.6","depth":3,"next":{"title":"Text Area","level":"1.4.9.7","depth":3,"path":"components/input/text-area.md","ref":"components/input/text-area.md","articles":[]},"previous":{"title":"Select Input","level":"1.4.9.5","depth":3,"path":"components/input/select.md","ref":"components/input/select.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/input/slider.md","mtime":"2018-10-08T06:49:58.343Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T06:50:39.211Z"},"basePath":"../..","book":{"language":""}});
         });
     </script>
 </div>
